tests/testcases/valid/local_static/04_static_inside_member.ciel
class A {
    A() {
        static int counter = 0;
        counter = counter + 1;
    }
    int get_counter() {
        static int cnt = 0;
        return cnt;
    }
};
