tests/testcases/invalid/semantic/79_typename_vars.ciel
struct A{
    int x;
    int y;
};

int main(){
    struct A A;
    A.x=5;

    return 0;
}